src/objects/Solution.object
<CustomObject>
    <businessProcesses>
        <fullName>IDFS</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Draft</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Duplicate - web</fullName>
        </values>
        <values>
            <fullName>Ready for translation - French</fullName>
        </values>
        <values>
            <fullName>Ready for translation - Spanish Americas</fullName>
        </values>
        <values>
            <fullName>Ready for translation - Spanish Europe</fullName>
        </values>
        <values>
            <fullName>Review 2 - Americas</fullName>
        </values>
        <values>
            <fullName>Review 2 - Europe</fullName>
        </values>
        <values>
            <fullName>Review 3 - Americas</fullName>
        </values>
        <values>
            <fullName>Review 3 - Europe</fullName>
        </values>
        <values>
            <fullName>Reviewed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SIS Help Desk</fullName>
        <description>Used for SIS Help Desk Solutions</description>
        <isActive>true</isActive>
        <values>
            <fullName>Draft</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Reviewed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard</fullName>
        <description>Standard solutions</description>
        <isActive>true</isActive>
        <values>
            <fullName>Draft</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Duplicate - web</fullName>
        </values>
        <values>
            <fullName>Reviewed</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Answer_Views__c</fullName>
        <label>Answer_Views</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Answered_No__c</fullName>
        <label>Answered No</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Answered_Yes__c</fullName>
        <label>Answered Yes</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_Specific__c</fullName>
        <description>Field used for solutions that relate to a specific country</description>
        <label>Country Specific</label>
        <picklist>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium &amp; Luxembourg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyprus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic &amp; Slovakia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Israel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nordic &amp; Baltic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romania &amp; Moldavia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serbia &amp; Montenegro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switzerland &amp; Liechtenstein</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turkey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ukraine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Documentation__c</fullName>
        <description>Reference to existing documentation</description>
        <label>Documentation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATA_solution_number__c</fullName>
        <description>Field used to combine child solutions with parent solutions when building the relation between these</description>
        <label>IATA solution number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Defines the language of the solution</description>
        <label>Language IATA</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Business_Process__c</fullName>
        <description>Definition of the Business Process this solution refers to</description>
        <label>Main Business Process</label>
        <picklist>
            <picklistValues>
                <fullName>Accreditation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSP Procedures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSP Reports or Billings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ticket Stock Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSP system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSPLink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CASS Procedures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applications / interfaces</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Need_Clarifications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Solution needs to be further clarified.</description>
        <label>Need Clarifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Originator__c</fullName>
        <inlineHelpText>This field is used to be able to sort FAQs related to Suspension of an Airline in an easy way for the RRT team</inlineHelpText>
        <label>Originator</label>
        <picklist>
            <picklistValues>
                <fullName>Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cargo Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internally</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passengers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Agent</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Ready_for_translation_to__c</fullName>
        <description>Whenever a solution is ready for translation, the language shall be selected. A work flow rule will then be activated and the translator will be notified.</description>
        <label>Ready for translation to</label>
        <picklist>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish - Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish - Europe</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Ready_for_validation_by__c</fullName>
        <description>Whenever a solution has been created and is ready for validation by another region this field shall be selected. A work flow rule will then be initiated.</description>
        <label>Ready for validation by:</label>
        <picklist>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relates_to_Suspension_of_an_Airline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Relates to Suspension of an Airline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDCForeign_SolutionID__c</fullName>
        <label>SFDCForeign_SolutionID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AirlinesuspensionFAQsAirlines</fullName>
        <columns>SOLUTION.ISSUE</columns>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>SOLUTION.STATUS</columns>
        <columns>Originator__c</columns>
        <columns>SOLUTION.LAST_UPDATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Relates_to_Suspension_of_an_Airline__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Originator__c</field>
            <operation>equals</operation>
            <value>Airlines</value>
        </filters>
        <label>Airline suspension FAQs - Airlines</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>VPIDFS</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AirlinesuspensionFAQsInternally</fullName>
        <columns>SOLUTION.ISSUE</columns>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>SOLUTION.STATUS</columns>
        <columns>Originator__c</columns>
        <columns>SOLUTION.LAST_UPDATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Relates_to_Suspension_of_an_Airline__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Originator__c</field>
            <operation>equals</operation>
            <value>Internally</value>
        </filters>
        <label>Airline suspension FAQs - Internally</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>VPIDFS</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AirlinesuspensionFAQsPassengers</fullName>
        <columns>SOLUTION.ISSUE</columns>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>SOLUTION.STATUS</columns>
        <columns>Originator__c</columns>
        <columns>SOLUTION.LAST_UPDATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Relates_to_Suspension_of_an_Airline__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Originator__c</field>
            <operation>equals</operation>
            <value>Passengers</value>
        </filters>
        <label>Airline suspension FAQs - Passengers</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>VPIDFS</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AirlinesuspensionFAQsTravelAgents</fullName>
        <columns>SOLUTION.ISSUE</columns>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>SOLUTION.STATUS</columns>
        <columns>Originator__c</columns>
        <columns>SOLUTION.LAST_UPDATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Relates_to_Suspension_of_an_Airline__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Originator__c</field>
            <operation>equals</operation>
            <value>Travel Agent</value>
        </filters>
        <label>Airline suspension FAQs - Travel Agents</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>VPIDFS</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllReviewedSolutions</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS_CODE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Relates_to_Suspension_of_an_Airline__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>SOLUTION.LANGUAGE_LOCALE_KEY</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Reviewed Solutions</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Anita_test_view</fullName>
        <columns>SOLUTION.ISSUE</columns>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>UPDATEBY_USER.ALIAS</columns>
        <columns>Answer_Views__c</columns>
        <columns>Answered_No__c</columns>
        <columns>Answered_Yes__c</columns>
        <columns>SOLUTION.STATUS</columns>
        <columns>SOLUTION.PARENT_ISSUE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>SOLUTION.TIMES_USED</columns>
        <columns>SOLUTION.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Answer_Views__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>SOLUTION.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Solution.IDFS</value>
        </filters>
        <label>Anita test view - Solutions</label>
        <language>en_US</language>
        <sharedTo>
            <group>IATAAdmins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BSPProcedures</fullName>
        <columns>SOLUTION.ISSUE</columns>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>IATA_solution_number__c</columns>
        <columns>SOLUTION.STATUS</columns>
        <columns>Main_Business_Process__c</columns>
        <columns>Language__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>SOLUTION.TIMES_USED</columns>
        <columns>SOLUTION.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Main_Business_Process__c</field>
            <operation>equals</operation>
            <value>BSP Procedures</value>
        </filters>
        <label>BSP Procedures</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BSPReportsorBilling</fullName>
        <columns>SOLUTION.ISSUE</columns>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>IATA_solution_number__c</columns>
        <columns>SOLUTION.STATUS</columns>
        <columns>Main_Business_Process__c</columns>
        <columns>Language__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>SOLUTION.TIMES_USED</columns>
        <columns>SOLUTION.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Main_Business_Process__c</field>
            <operation>equals</operation>
            <value>BSP Reports or Billings</value>
        </filters>
        <filters>
            <field>SOLUTION.LANGUAGE_LOCALE_KEY</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>BSP Reports or Billing</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>IDFSEuropeRegionalOffice</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BSP_Procedures_French</fullName>
        <columns>SOLUTION.ISSUE</columns>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>SOLUTION.STATUS</columns>
        <columns>SOLUTION.LANGUAGE_LOCALE_KEY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>SOLUTION.TIMES_USED</columns>
        <columns>SOLUTION.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Main_Business_Process__c</field>
            <operation>equals</operation>
            <value>BSP Procedures</value>
        </filters>
        <filters>
            <field>SOLUTION.LANGUAGE_LOCALE_KEY</field>
            <operation>equals</operation>
            <value>48</value>
        </filters>
        <label>BSP Procedures - French</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BSP_Reports_Billing_French</fullName>
        <columns>SOLUTION.ISSUE</columns>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>SOLUTION.STATUS</columns>
        <columns>SOLUTION.LANGUAGE_LOCALE_KEY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>SOLUTION.TIMES_USED</columns>
        <columns>SOLUTION.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Main_Business_Process__c</field>
            <operation>equals</operation>
            <value>BSP Reports or Billings</value>
        </filters>
        <filters>
            <field>SOLUTION.LANGUAGE_LOCALE_KEY</field>
            <operation>equals</operation>
            <value>48</value>
        </filters>
        <label>BSP Reports or Billing - French</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BSPlink</fullName>
        <columns>SOLUTION.ISSUE</columns>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>SOLUTION.STATUS</columns>
        <columns>Language__c</columns>
        <columns>Main_Business_Process__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>SOLUTION.TIMES_USED</columns>
        <columns>SOLUTION.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Main_Business_Process__c</field>
            <operation>equals</operation>
            <value>BSPLink</value>
        </filters>
        <filters>
            <field>SOLUTION.LANGUAGE_LOCALE_KEY</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>BSPlink</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>VPIDFS</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BSPlink_French</fullName>
        <columns>SOLUTION.ISSUE</columns>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>SOLUTION.STATUS</columns>
        <columns>SOLUTION.LANGUAGE_LOCALE_KEY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>SOLUTION.TIMES_USED</columns>
        <columns>SOLUTION.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Main_Business_Process__c</field>
            <operation>equals</operation>
            <value>BSPLink</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>French</value>
        </filters>
        <label>BSPlink - French</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CASSprocedures</fullName>
        <columns>SOLUTION.ISSUE</columns>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>SOLUTION.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>SOLUTION.TIMES_USED</columns>
        <columns>SOLUTION.LAST_UPDATE</columns>
        <columns>Main_Business_Process__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Main_Business_Process__c</field>
            <operation>contains</operation>
            <value>CASS</value>
        </filters>
        <label>CASS procedures</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>IDFSEuropeRegionalOffice</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Drafts</fullName>
        <columns>SOLUTION.ISSUE</columns>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>SOLUTION.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>SOLUTION.TIMES_USED</columns>
        <columns>SOLUTION.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Drafts</label>
        <language>en_US</language>
        <sharedTo>
            <group>IDFSRegionalSystemManagers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ProductEnquiries</fullName>
        <columns>SOLUTION.ISSUE</columns>
        <columns>SOLUTION.SOLUTION_NUMBER</columns>
        <columns>SOLUTION.STATUS</columns>
        <columns>Language__c</columns>
        <columns>Main_Business_Process__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>SOLUTION.TIMES_USED</columns>
        <columns>SOLUTION.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Main_Business_Process__c</field>
            <operation>equals</operation>
            <value>Product Enquiry</value>
        </filters>
        <label>Product Enquiries</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>IDFSEuropeRegionalOffice</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>IDFS</fullName>
        <active>true</active>
        <businessProcess>IDFS</businessProcess>
        <label>IDFS</label>
    </recordTypes>
    <recordTypes>
        <fullName>SIS_Help_Desk</fullName>
        <active>true</active>
        <businessProcess>SIS Help Desk</businessProcess>
        <description>Used for SIS Help Desk Solutions</description>
        <label>SIS Help Desk</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <businessProcess>Standard</businessProcess>
        <description>Standard solution items</description>
        <label>Standard</label>
    </recordTypes>
</CustomObject>